# cpp-project-template

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md
src/: main.cpp  plane.cpp  plane.hpp
src/volume_allocation/: VolumeAllocation.cpp  VolumeAllocation.hpp
src/volume_allocation_highs/: CMakeLists.txt
test/: CMakeLists.txt  VolumeAllocationTests.cpp  ut_helper.cmake
test/plane/: plane_tests.cpp
